# slow-lob

./: .gitignore  Cargo.toml  README.md
lob-rust/: Cargo.toml  README.md
lob-rust/src/: feedback.rs  main.rs  orderbook.rs  utils.rs
lob-rust/src/venues/: binance.rs  coinbase.rs  mod.rs  upbit.rs
lob-vue/: README.md  package.json  vue.config.js
lob-vue/src/: App.vue  main.js
lob-vue/src/components/: Dashboard.vue  OrderBookTable.vue  PriceChart.vue
lob-vue/src/store/: index.js
lob-vue/src/utils/: WebsocketData.vue
src/: exchange_traits.rs  feedback.rs  main.rs  orderbook.rs  utils.rs  venue_traits.rs  venues.rs  websockets.rs
src/venues/: binance.rs  coinbase.rs  mod.rs  upbit.rs  venue_traits.rs
