[package]
name = "slow-lbo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.26.1"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
tokio = "1.24.2"
prelude = "0.2.1"
mpsc = "0.1.0"
base64 = "0.21.0"
futures = "0.3.24"
native-tls = "0.2"
hmac = "0.12.1"
hex-literal = "0.3.4"
sha2 = "0.10.6"
chrono = "0.4.23"
digest = "0.10.6"
hex = "0.4.3"
ring = "0.16.20"